# ESP32

./: README.md  partitions.csv  sdkconfig  sdkconfig.old
components/custom/: CMakeLists.txt  custom.h
components/lvgl__lvgl/: CMakeLists.txt  component.mk  lv_conf.h  lvgl.h
components/lvgl__lvgl/src/extra/: lv_extra.c  lv_extra.mk
components/lvgl__lvgl/src/extra/widgets/: lv_widgets.h
components/lvgl__lvgl/src/extra/widgets/carousel/: lv_carousel.c  lv_carousel.h
components/lvgl__lvgl/src/extra/widgets/dclock/: lv_dclock.c  lv_dclock.h
components/lvgl_port/: CMakeLists.txt
main/: CMakeLists.txt  cst816s.c  cst816s.h  gc9a01.c  gc9a01.h  idf_component.yml  ioT.c  ioT.h  led_brightness.c  main.c
